# MrDoSDL

./: .gitignore  .gitmodules  CMakeLists.txt  Generate VS 2019 Project Files.bat  README.md  blankLevelScript.py
backend/: Backend.db  DeleteHighScoresWithoutReplays.py  InitDatabase.py  MrDoBackend.py  RunBackendServer.bat  Valid
backend/Replays/Valid/: JimmyM16100serverVersion0.replay
mrdo/assets/forth/: EnemyAi.fs  EnemyAi.fs.bak
mrdo/include/: AnimationAssetManager.h  Animator.h  AppleManager.h  BackendClient.h  BackgroundTileAssetManager.h  CMakeLists.txt  Character.h  CollisionHelpers.h  CommonTypedefs.h  ConfigFile.h  CrystalBall.h  EnemyManager.h  EnemyScripting.h  EnemyType.h  Event.h  EventListener.h  ExtraManEvents.h  FileSystem.h  FontAssetManager.h  Forth.h  ForthCommonTypedefs.h  ForthEnvironmentDefs.h  ForthStringHelpers.h  FrontEndLayer.h  GameFramework.h  GameFrameworkMessages.h  GameLayer.h  GameState.h  IAnimationAssetManager.h  IBackgroundTileAssetManager.h  IConfigFile.h  IFileSystem.h  IFontAssetManager.h  InputManager.h  LevelLoadData.h  MapMakerCreateNewLevelDialogue.h  MapMakerLayer.h  MapMakerLevelSelectLayer.h  MapMakerLevelSelectedDialogue.h  MovementHelpers.h  (+7 more)
mrdo/src/: AnimationAssetManager.cpp  Animator.cpp  AppleManager.cpp  BackendClient.cpp  BackgroundTileAssetManager.cpp  CMakeLists.txt  Character.cpp  CollisionHelpers.cpp  ConfigFile.cpp  CrystalBall.cpp  EnemyManager.cpp  EnemyScripting.cpp  FileSystem.cpp  FontAssetManager.cpp  Forth.c  ForthStringHelpers.c  FrontEndLayer.cpp  GameFramework.cpp  GameLayer.cpp  GameState.cpp  InputManager.cpp  MapMakerCreateNewLevelDialogue.cpp  MapMakerLayer.cpp  MapMakerLevelSelectLayer.cpp  MapMakerLevelSelectedDialogue.cpp  MovementHelpers.cpp  PathFinding.cpp  RNG.cpp  SN76489 .cpp  TextRenderer.cpp  TiledWorld.cpp  main.cpp
(+5 files in other folders)
